# nbcl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.nbcl  test.nbl
.github/workflows/: rust.yml
nbl_tests/: another.nbl  idk.nbl  imported.nbl  other.nbl  panic.nbl  test.nbl
src/: context.rs  engine.rs  error.rs  grammar.pest  lib.rs  library.rs  main.rs  module_resolver.rs  parser.rs  registry.rs  utils.rs  wasm.rs
src/ast/: mod.rs  resolved.rs  source.rs  utils.rs
src/builder/: component.rs  expr.rs  mod.rs  node.rs
src/builtin/: functions.rs  libraries.rs  mod.rs  nodes.rs
src/evaluate/: expr.rs  import.rs  mod.rs  node.rs  stmt.rs
tests/: eval.rs  imported.nbl  other.nbl  test.nbl
